styles/main.less
@import "bootstrap/bootstrap.less";
@import "variables.less";
@import "mixins.less";
@import "theme.less";
@import "icons.less";
@import "retina.less";
@import "setup.less";
@import "radial.less";
@import "preferences.less";
@import "header.less";
@import "layout.less";
@import "left-panel.less";
@import "right-panel.less";
@import "new-container.less";
@import "container-home.less";
@import "container-logs.less";
@import "container-settings.less";
@import "spinner.less";
@import "animation.less";
@import "container-progress.less";
@import "loading.less";

html, body {
  height: 100%;
  width: 100%;
  overflow: hidden;
  background: none;
  -webkit-user-select: none;
  -webkit-user-drag: none;
  font-family: @font-regular;
  cursor: default;
  -webkit-font-smoothing: subpixel-antialiased;
  text-rendering: optimizelegibility;
  //-webkit-font-smoothing: antialiased;
  img {
    pointer-events: none;
  }
}

